--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Mini OMS is an Order Management System ",
   "main": "/src/index.js",
   "scripts": {
+    "build": "rm -rf ./dist && tsc --build",
+    "dev":"ts-node-dev src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
