--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "Mini OMS is an Order Management System ",
   "main": "/src/index.js",
   "scripts": {
+    "start": "pm2 start ./dist/index.js -i max",
+    "monit": "pm2 monit",
+    "logs": "pm2 logs",
     "build": "rm -rf ./dist && tsc --build",
-    "dev":"ts-node-dev src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stop": "pm2 stop all"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "pm2": "^5.2.0",
+    "sequelize-typescript": "^2.1.3"
   }
 }
